--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>Aphrx</title>
     <link href="https://fonts.googleapis.com/css?family=Jost&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
